# oops

./: .env  README.md  alembic.ini  main.py  pyproject.toml  setup.cfg
app/: settings.py
app/db_models/: base.py  book.py
migrations/: env.py
migrations/versions/: 39d892f0aee7_add_books.py
